--- a/Bharde_Case_Study_3_Technical.ipynb
+++ b/Bharde_Case_Study_3_Technical.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -382,6 +382,7 @@
     }
    ],
    "source": [
+    "# plot for distribution of ratings\n",
     "plt.figure(figsize=(8,6))\n",
     "ratings['rating'].hist(bins=9, color='lightgreen', edgecolor='black')\n",
     "plt.title('Distribution of Ratings')\n",
